Fixed unnecessary wrap property

--- a/src/styles/molecules/_molecules.progress.scss
+++ b/src/styles/molecules/_molecules.progress.scss
@@ -50,7 +50,6 @@
 .m-progress--inline {
   align-items: center;
   display: flex;
-  flex-wrap: nowrap;
 
   .m-progress__label {
     margin-bottom: 0;
